WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29676
[Qt] QWebPage::setView() changes incorrectly the viewport size of a QWebGraphicsItem
https://bugs.webkit.org/show_bug.cgi?id=29676
Summary
[Qt] QWebPage::setView() changes incorrectly the viewport size of a QWebGraph...
J-P Nurmi
Reported
2009-09-23 04:21:28 PDT
Prevent QWebPage::setView() from changing the viewport size on the fly in case the view doesn't actually change. QWebPage::setView() is called upon every QWebGraphicsItem::hoverMoveEvent(), which forces the viewport size to be equal to the size of the whole graphics view. The geometry of a single graphics item rarely matches the geometry of the whole graphics view.
Attachments
QWebPage::setView(): check if the view actually changes
(1.29 KB, patch)
2009-09-23 04:28 PDT
,
J-P Nurmi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
J-P Nurmi
Comment 1
2009-09-23 04:28:28 PDT
Created
attachment 39987
[details]
QWebPage::setView(): check if the view actually changes
Simon Hausmann
Comment 2
2009-09-23 14:40:49 PDT
Comment on
attachment 39987
[details]
QWebPage::setView(): check if the view actually changes r=me. Good catch :)
WebKit Commit Bot
Comment 3
2009-09-23 18:02:11 PDT
Comment on
attachment 39987
[details]
QWebPage::setView(): check if the view actually changes Clearing flags on attachment: 39987 Committed
r48693
: <
http://trac.webkit.org/changeset/48693
>
WebKit Commit Bot
Comment 4
2009-09-23 18:02:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug